update: vscode config

--- a/config/settings.json
+++ b/config/settings.json
@@ -2,6 +2,7 @@
 // Vim by vscodevim
 // Explicit Folding by zokugun
 // multi-command by ryuta46
+// Auto Commit Message by MichaelCurrin
 // }}}
 
 {
